# xivrp-formatter

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp  readme.md  template.html
.github/: FUNDING.yml
.run/: XIVRP-Formatter.run.xml
common/: utilities.cpp  utilities.h
images/: related_images.cpp  related_images.h  reshade.cpp  reshade.h
includes/: NLTemplate.cpp  NLTemplate.h  base64.hpp  date.h  png-base64-webp.h  related_images.cpp  related_images.h  settings.cpp  settings.h  templating.h
includes/messages/: loading.cpp  loading.h  message.cpp  message.h  messages.cpp
log_sources/: .log_source.cpp  .log_source.h  .smart.cpp  .smart.h  chat2.cpp  chat2.h  chatscan.cpp  chatscan.h  discord.cpp  discord.h  gobchat.cpp  gobchat.h  xivlogger.cpp  xivlogger.h
messages/: find_session.cpp  find_session.h  gaps.cpp  gaps.h  loading.cpp  loading.h  message.cpp  message.h  messages.cpp  messages.h
settings/: ask.cpp  ask.h  settings.cpp  settings.h
templating/: templating.cpp  templating.h
